Source .mdx files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spruce-another-css-framework",
+  "name": "spruce",
   "version": "1.0.0",
   "private": true,
   "description": "Spruce - Another CSS Framework",
