--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-slug": "^5.0.0",
+    "remark-slug": "^7.0.1",
     "sass": "^1.43.2"
   },
   "devDependencies": {
