--- a/package.json
+++ b/package.json
@@ -8,35 +8,32 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "cross-env NODE_OPTIONS=\"-r esm\" gatsby develop",
+    "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "cross-env NODE_OPTIONS=\"-r esm\" gatsby build",
-    "serve": "cross-env NODE_OPTIONS=\"-r esm\" gatsby serve",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^3.14.3",
-    "gatsby-plugin-google-analytics": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby": "^4.1.1",
+    "gatsby-plugin-google-analytics": "^4.1.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-mdx": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sitemap": "^5.1.0",
+    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "rehype-autolink-headings": "^6.1.0",
-    "rehype-slug": "^5.0.0",
-    "remark-slug": "^7.0.1",
     "sass": "^1.43.2"
   },
   "devDependencies": {
