--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Spruce - Another CSS Framework",
-  "author": "Adam Laki",
+  "author": "Cone",
   "keywords": [
     "gatsby"
   ],
@@ -35,9 +35,5 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.43.2"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "esm": "^3.2.25"
   }
 }
