--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "spruce",
+  "name": "spruce-site",
   "version": "1.0.0",
   "private": true,
-  "description": "Spruce - Another CSS Framework",
+  "description": "Spruce CSS Documentation Page",
   "author": "Cone",
   "keywords": [
     "gatsby"
