--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.43.2"
+    "sass": "^1.43.2",
+    "sprucecss": "^0.1.0"
   }
 }
