Add analytics and cookie consent banner

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-gdpr-cookies": "^2.0.8",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-mdx": "^3.4.0",
@@ -32,6 +33,7 @@
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
+    "react-cookie-consent": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.45.2",
