--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.45.2",
-    "sprucecss": "^0.1.3"
+    "sprucecss": "^0.1.3",
+    "universal-cookie": "^4.0.4"
   }
 }
