--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "eslint": "^8.17.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
     "stylelint": "^14.8.5",
     "stylelint-config-sass-guidelines": "^9.0.1"
   }
