--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-sitemap": "^5.16.0",
     "gatsby-remark-responsive-iframe": "^5.16.0",
     "gatsby-source-filesystem": "^4.16.0",
+    "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-sharp": "^4.16.0",
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.3.3",
