--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
+    "build:clean": "npm-run-all clean build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "sass-lint": "stylelint src/styles/**/*.scss",
@@ -35,6 +36,7 @@
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "normalize.css": "^8.0.1",
+    "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-cookie-consent": "^7.6.0",
