--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-source-git": "^1.1.0",
-    "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.57.1",
     "sprucecss": "^1.2.0",
     "universal-cookie": "^4.0.4"
