--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
+    "build:clean": "npm-run-all clean build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "sass:lint": "stylelint src/styles/**/*.scss",
@@ -31,6 +32,7 @@
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-sharp": "^5.3.1",
+    "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-cookie-consent": "^8.0.1",
