--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
   "devDependencies": {
     "eslint": "^8.31.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.0",
     "stylelint": "^14.16.1",
     "stylelint-config-sass-guidelines": "^9.0.1"
   }
