--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
-    "function-parentheses-space-inside": "never-single-line",
     "max-nesting-depth": 4,
     "selector-no-vendor-prefix": [true,
       {
@@ -20,6 +19,7 @@
     ],
     "color-function-notation": "modern",
     "selector-class-pattern": null,
-    "scss/percent-placeholder-pattern": null
+    "scss/percent-placeholder-pattern": null,
+    "selector-max-compound-selectors": 5
   }
 }
