--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
     "build:clean": "npm-run-all clean build",
-    "serve": "gatsby serve",
+    "build": "gatsby build",
     "clean": "gatsby clean",
+    "develop": "gatsby develop",
+    "preload-fonts": "gatsby-preload-fonts",
+    "sass:lint:fix": "stylelint src/styles/**/*.scss --fix",
     "sass:lint": "stylelint src/styles/**/*.scss",
-    "sass:lint:fix": "stylelint src/styles/**/*.scss --fix"
+    "serve": "gatsby serve",
+    "start": "gatsby develop"
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.3.0",
@@ -25,6 +26,7 @@
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-mdx": "^5.9.0",
+    "gatsby-plugin-preload-fonts": "^4.9.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sharp": "^5.9.0",
