--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,18 +1,23 @@
 {
   "extends": "stylelint-config-sass-guidelines",
+  "plugins": ["stylelint-order"],
   "rules": {
+    "selector-max-compound-selectors": 5,
     "max-nesting-depth": 4,
-    "selector-no-vendor-prefix": [true,
+    "selector-no-vendor-prefix": [
+      true,
       {
         "ignoreSelectors": ["/-moz-.*/", "/-ms-.*/", "/-webkit-.*/"]
       }
     ],
-    "selector-no-qualifying-type": [true,
+    "selector-no-qualifying-type": [
+      true,
       {
         "ignore": ["attribute"]
       }
     ],
-    "value-no-vendor-prefix": [true,
+    "value-no-vendor-prefix": [
+      true,
       {
         "ignoreValues": ["box"]
       }
@@ -20,6 +25,6 @@
     "color-function-notation": "modern",
     "selector-class-pattern": null,
     "scss/percent-placeholder-pattern": null,
-    "selector-max-compound-selectors": 5
+    "order/properties-alphabetical-order": true
   }
 }
