--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,8 +63,8 @@ jobs:
         -
             name: Remove document contents
             run: |
-                git ls-files -z -- 'src/**.md' | xargs -0 -n 1 -- sed -i -e 'N;P;/---\n$/Q;D'
+                git ls-files -z -- 'src/**.mdx' | xargs -0 -n 1 -- sed -i -e 'N;P;/---\n$/Q;D'
         -
             name: Check Front Matter
             run: |
-                git ls-files -z -- 'src/**.md' | xargs -0 -n 1 -- python -m yamllint
+                git ls-files -z -- 'src/**.mdx' | xargs -0 -n 1 -- python -m yamllint
